# quantum-player-v5

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: mainwindow.cpp  mainwindow.h
src/dsp/: biquadfilter.h
src/player/: audioengine.cpp  audioengine.h
src/ui/: equalizerwidget.cpp
